<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.paulchidi.cashless.activities.GeneratorActivity">

    <EditText
        android:id="@+id/editText_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_accountname"
        android:layout_alignStart="@+id/editText_accountname"
        android:layout_below="@+id/editText_accountname"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/hint_edittext_amount"
        android:inputType="number"
        android:singleLine="true" />

    <EditText
        android:id="@+id/editText_accountname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/hint_edittext_acctname"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/editText_accountnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_amount"
        android:layout_alignStart="@+id/editText_amount"
        android:layout_below="@+id/editText_amount"
        android:ems="10"
        android:hint="@string/hint_editext_acct"
        android:inputType="number"
        android:maxLength="10" />

    <Button
        android:id="@+id/button_generate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView_QrCode"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:text="@string/text_button_gen"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@color/colorPrimary" />

    <ImageView
        android:id="@+id/imageView_QrCode"
        android:layout_width="500px"
        android:layout_height="500px"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/text_image_desc" />

</RelativeLayout>
