<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.paulchidi.cashless.fragments.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- TODO: Update blank fragment layout -->


        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView3"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignLeft="@+id/textView7"
            android:layout_alignStart="@+id/textView7"
            android:text="@string/text_textview_BuyAirtime"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView5"
            android:layout_alignBottom="@+id/textView5"
            android:layout_alignEnd="@+id/imageButton_GenQr"
            android:layout_alignRight="@+id/imageButton_GenQr"
            android:text="@string/text_textview_paybills"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView8"
            android:layout_alignRight="@+id/textView8"
            android:layout_below="@+id/imageButton_GenQr"
            android:text="Make Payment"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorPrimary" />

        <ImageButton
            android:id="@+id/imageButton_ScanQr"
            style="@android:style/Widget.Holo.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="59dp"
            android:layout_marginStart="59dp"
            android:layout_marginTop="58dp"

            android:background="@android:color/white"
            android:contentDescription="Scanner Image"
            app:srcCompat="@drawable/search_48" />

        <ImageButton
            android:id="@+id/imageButton_GenQr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/imageButton_ScanQr"
            android:layout_marginEnd="95dp"
            android:layout_marginRight="95dp"
            android:background="@android:color/white"
            android:contentDescription="Generate Barcode"
            app:srcCompat="@drawable/qr_code_64" />

        <ImageButton
            android:id="@+id/imageButton_CheckBal"
            style="@android:style/Widget.Holo.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageButton_ScanQr"
            android:layout_alignStart="@+id/imageButton_ScanQr"
            android:layout_below="@+id/imageButton_GenQr"
            android:layout_marginTop="53dp"
            android:background="@android:color/white"
            app:srcCompat="@drawable/coins_48" />

        <ImageButton
            android:id="@+id/imageButton_PayBills"
            style="@android:style/Widget.Holo.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/imageButton_Transfer"
            android:layout_alignLeft="@+id/imageButton_GenQr"
            android:layout_alignStart="@+id/imageButton_GenQr"
            android:background="@android:color/white"
            app:srcCompat="@drawable/bill_48" />

        <ImageButton
            android:id="@+id/imageButton_Transfer"
            style="@android:style/Widget.DeviceDefault.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageButton_CheckBal"
            android:layout_alignStart="@+id/imageButton_CheckBal"
            android:layout_below="@+id/imageButton_CheckBal"
            android:layout_marginTop="46dp"
            android:background="@android:color/white"
            app:srcCompat="@drawable/transfer_between_users_50" />

        <ImageButton
            android:id="@+id/imageButton_BuyAirtime"
            style="@android:style/Widget.Holo.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageButton_PayBills"
            android:layout_alignStart="@+id/imageButton_PayBills"
            android:layout_alignTop="@+id/imageButton_Transfer"
            android:background="@android:color/white"
            app:srcCompat="@drawable/cell_phone_48" />

        <ImageButton
            android:id="@+id/imageButton_ManageCards"
            style="@android:style/Widget.Holo.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageButton_Transfer"
            android:layout_alignStart="@+id/imageButton_Transfer"
            android:layout_below="@+id/imageButton_Transfer"
            android:layout_marginTop="53dp"
            android:background="@android:color/white"
            app:srcCompat="@drawable/bank_cards_50" />

        <ImageButton
            android:id="@+id/imageButton_Exit"
            style="@android:style/Widget.Holo.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageButton_BuyAirtime"
            android:layout_alignStart="@+id/imageButton_BuyAirtime"
            android:layout_alignTop="@+id/imageButton_ManageCards"
            android:background="@android:color/white"
            app:srcCompat="@drawable/exit_50" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageButton_GenQr"
            android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp"
            android:text="@string/text_textview_scanpayment"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/imageButton_Exit"
            android:layout_alignLeft="@+id/textView4"
            android:layout_alignStart="@+id/textView4"
            android:layout_marginBottom="15dp"
            android:text="@string/text_textview_transfer"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignBottom="@+id/textView2"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:text="@string/text_textview_managecards"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/imageButton_BuyAirtime"
            android:layout_alignEnd="@+id/textView"
            android:layout_alignRight="@+id/textView"
            android:layout_marginBottom="13dp"
            android:text="@string/text_textview_checkbalance"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView7"
            android:layout_alignRight="@+id/textView7"
            android:layout_below="@+id/imageButton_Exit"
            android:layout_marginTop="11dp"
            android:text="@string/text_textview_Exit"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>

</FrameLayout>
